@@ -18,15 +18,51 @@
 
 package org.apache.hadoop.mapred;
 
-import org.apache.hadoop.examples.WordCount;
+import java.io.IOException;
+import java.util.Iterator;
+import java.util.StringTokenizer;
+
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.io.IntWritable;
+import org.apache.hadoop.io.LongWritable;
 import org.apache.hadoop.io.Text;
 
-public class CombinerJobCreator extends WordCount {
+public class CombinerJobCreator {
+
+   public static class MapClass extends MapReduceBase
+     implements Mapper<LongWritable, Text, Text, IntWritable> {
+
+     private final static IntWritable one = new IntWritable(1);
+     private Text word = new Text();
+
+     public void map(LongWritable key, Text value,
+                     OutputCollector<Text, IntWritable> output,
+                     Reporter reporter) throws IOException {
+       String line = value.toString();
+       StringTokenizer itr = new StringTokenizer(line);
+       while (itr.hasMoreTokens()) {
+         word.set(itr.nextToken());
+         output.collect(word, one);
+       }
+     }
+   }
+
+   public static class Reduce extends MapReduceBase
+     implements Reducer<Text, IntWritable, Text, IntWritable> {
+
+     public void reduce(Text key, Iterator<IntWritable> values,
+                        OutputCollector<Text, IntWritable> output,
+                        Reporter reporter) throws IOException {
+       int sum = 0;
+       while (values.hasNext()) {
+         sum += values.next().get();
+       }
+       output.collect(key, new IntWritable(sum));
+     }
+   }
 
   public static JobConf createJob(String[] args) throws Exception {
-    JobConf conf = new JobConf(WordCount.class);
+    JobConf conf = new JobConf(CombinerJobCreator.class);
     conf.setJobName("GridmixCombinerJob");
 
     // the keys are words (strings)
