@@ -927,6 +927,8 @@ Release 0.20.0 - Unreleased
 
     HADOOP-5111. Fix Job::set* methods to work with generics. (cdouglas)
 
+    HADOOP-5274. Fix gridmix2 dependency on wordcount example. (cdouglas)
+
 Release 0.19.2 - Unreleased
 
   BUG FIXES
